...
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="Login"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="No account yet? Create one!"
                android:gravity="center"
                android:textSize="16dip"/>

            <TextView
                android:id="@+id/link_forgot"
                android:layout_width="match_parent"
...
