...
                android:layout_height="wrap_content"
                android:text="current" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="all" />
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_width="395dp"
...
